Correct spelling of 'vallantine' to 'valentine'

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div id="container">
         <div id="question-section">
             <img src="img1.jpg" class="valentine-img">
-            <h1>Will you be my vallantine?</h1>
+            <h1>Will you be my valentine?</h1>
             <div class="buttons-wrapper">
                 <button id="yesBtn">Yes</button>
                 <button id="noBtn">No</button>
